--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "posttest": "npm run kill:test",
     "test-coverage": "jest -i --verbose --forceExit --coverage",
     "debug": "nodemon .",
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
+    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json .",
+    "swagger-autogen": "node ./swagger.js"
   },
   "devDependencies": {
     "eslint": "6.8.0",
@@ -44,6 +45,8 @@
     "sequelize-cli": "6.2.0",
     "sequelize-jest-helpers": "^1.0.2",
     "supertest": "4.0.2",
+    "swagger-autogen": "^2.21.5",
+    "swagger-ui-express": "^4.5.0",
     "wait-on": "^6.0.1"
   }
 }
