CHORE: added npm start
When the container start should start the application

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     container_name: blogs_api
     tty: true
     stdin_open: true
-    command: bash
+    command: npm start
     restart: always
     depends_on:
       - db
