CHORE: changed jwt secret

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       MYSQL_USER: root
       MYSQL_PASSWORD: password
       HOSTNAME: db
-      JWT_SECRET: secretJWT
+      JWT_SECRET: suaSenhaSecreta
   db:
     container_name: blogs_api_db
     image: mysql:8.0.21
